--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "license": "MIT",
   "version": "0.0.1",
   "scripts": {
+    "deploy:build": "surge ./build --domain server.remix-firebase.surge.sh",
+    "deploy:public": "surge ./public/build --domain remix-firebase.surge.sh",
+    "deploy": "",
+    "surge": "surge",
+    "surge:domain": "surge --domain remix-firebase.surge.sh",
     "test": "NODE_ENV=development npx jest --watchAll",
     "build": "remix build",
     "dev": "remix dev",
@@ -16,11 +21,18 @@
     "@remix-run/react": "^1.3.3",
     "@remix-run/serve": "^1.3.3",
     "@remix-run/vercel": "^1.3.3",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/line-clamp": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.2",
+    "autoprefixer": "^10.4.7",
     "firebase": "^9.6.6",
     "firebase-admin": "^10.0.2",
+    "postcss": "^8.4.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.3.3"
+    "remix": "^1.3.3",
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.1.3",
@@ -29,6 +41,7 @@
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
+    "cross-env": "^7.0.3",
     "firebase-tools": "^10.2.0",
     "jest": "^27.5.1",
     "jest-node-exports-resolver": "^1.1.5",
